# hookbox

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  clippy.toml  codecov.yml  deny.toml  docker-compose.test.yml  justfile  rust-toolchain.toml
.cargo/: config.toml  mutants.toml
.claude/: settings.json
.config/: nextest.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  nightly.yml
crates/hookbox/: Cargo.toml  README.md
crates/hookbox-cli/: Cargo.toml  README.md
crates/hookbox-cli/src/: db.rs  lib.rs  main.rs
crates/hookbox-cli/src/commands/: config.rs  config_validate.rs  dlq.rs  emitters.rs  mod.rs  receipts.rs  replay.rs  serve.rs
crates/hookbox-cli/tests/: cli_parsing.rs  config_validate_cli.rs
crates/hookbox-emitter-kafka/: Cargo.toml  README.md
crates/hookbox-emitter-kafka/src/: lib.rs
crates/hookbox-emitter-kafka/tests/: round_trip.rs
crates/hookbox-emitter-nats/: Cargo.toml  README.md
crates/hookbox-emitter-nats/src/: lib.rs
crates/hookbox-emitter-nats/tests/: round_trip.rs
crates/hookbox-emitter-redis/: Cargo.toml  README.md
crates/hookbox-emitter-redis/src/: lib.rs
crates/hookbox-emitter-redis/tests/: round_trip.rs
crates/hookbox-emitter-sqs/: Cargo.toml  README.md
crates/hookbox-emitter-sqs/src/: lib.rs
crates/hookbox-emitter-sqs/tests/: round_trip.rs
crates/hookbox-postgres/: Cargo.toml  README.md
crates/hookbox-postgres/migrations/: 0001_create_webhook_receipts.sql  0002_create_webhook_deliveries.sql  0003_in_flight_reclaim_index.sql
crates/hookbox-postgres/src/: dedupe.rs  lib.rs  storage.rs
crates/hookbox-providers/: Cargo.toml  README.md
crates/hookbox-providers/src/: adyen.rs  bvnk.rs  generic_hmac.rs  lib.rs  stripe.rs  triplea.rs  triplea_crypto.rs  walapay.rs
crates/hookbox-server/: Cargo.toml  README.md
crates/hookbox-server/fuzz/: Cargo.toml
crates/hookbox-server/fuzz/fuzz_targets/: config_normalize.rs
crates/hookbox-server/src/: bootstrap.rs  config.rs  emitter_factory.rs  lib.rs  serve.rs  shutdown.rs  worker.rs
crates/hookbox-server/src/routes/: admin.rs  health.rs  ingest.rs  mod.rs  tests.rs
crates/hookbox-server/tests/: shutdown_sigint.rs  shutdown_sigterm.rs
crates/hookbox-verify/: Cargo.toml  README.md
crates/hookbox-verify/src/: backoff_props.rs  dedupe_props.rs  emitter_props.rs  hash_props.rs  kani_proofs.rs  lib.rs  metrics_props.rs  provider_props.rs  retry_props.rs  state_props.rs
crates/hookbox/benches/: ingest.rs
crates/hookbox/fuzz/: Cargo.toml
crates/hookbox/fuzz/fuzz_targets/: fuzz_payload_hash.rs  fuzz_provider_signature.rs  fuzz_receipt_serde.rs
crates/hookbox/src/: dedupe.rs  emitter.rs  error.rs  hash.rs  lib.rs  pipeline.rs  state.rs  traits.rs  transitions.rs  types.rs
crates/hookbox/tests/: bdd.rs
crates/hookbox/tests/features/: emitters.feature  ingest.feature  providers.feature  retry.feature
docs/: ROADMAP.md
docs/superpowers/plans/: 2026-04-10-hookbox-mvp.md  2026-04-11-emitter-adapters.md  2026-04-11-mvp-gaps.md  2026-04-11-provider-adapters.md  2026-04-11-quality-robustness.md  2026-04-12-emitter-fan-out.md  2026-04-12-redis-emitter-and-emitter-test-coverage.md
docs/superpowers/specs/: 2026-04-10-hookbox-design.md  2026-04-11-emitter-adapters-design.md  2026-04-11-mvp-gaps-design.md  2026-04-12-emitter-fan-out-design.md  2026-04-12-redis-emitter-and-emitter-test-coverage-design.md
examples/: hookbox.toml
integration-tests/: Cargo.toml  README.md
integration-tests/tests/: admin_api_test.rs  cli_emitters_test.rs  cli_handlers_test.rs  cli_test.rs  delivery_storage.rs  emitter_smoke_test.rs  fanout.rs  http_test.rs  ingest_test.rs  migration_0002.rs  serve_smoke.rs  storage_fault_injection.rs  worker_test.rs
scenario-tests/: Cargo.toml  README.md
scenario-tests/features/core/: backoff.feature  derived_state.feature  emitters.feature  fanout.feature  ingest.feature
scenario-tests/features/server/: dlq.feature  fanout.feature  retry.feature
scenario-tests/src/: fake_emitter.rs  lib.rs  server_harness.rs  steps.rs  steps_server.rs  world.rs
scenario-tests/tests/: core_bdd.rs  server_bdd.rs
