[workspace]
resolver = "2"
members = [
    "crates/hookbox",
    "crates/hookbox-postgres",
    "crates/hookbox-providers",
    "crates/hookbox-server",
    "crates/hookbox-cli",
    "crates/hookbox-verify",
    "integration-tests",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Milerius/hookbox"
description = "A durable webhook inbox: verify, dedupe, persist, replay, and audit every event before business logic touches it."

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "warn"
panic = "deny"
panic_in_result_fn = "deny"
unimplemented = "deny"
allow_attributes = "deny"
dbg_macro = "deny"
todo = "deny"
print_stdout = "deny"
print_stderr = "deny"
await_holding_lock = "deny"
large_futures = "deny"
exit = "deny"
mem_forget = "deny"
module_name_repetitions = "allow"
similar_names = "allow"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[workspace.dependencies]
hookbox = { path = "crates/hookbox", version = "0.1.0" }
hookbox-postgres = { path = "crates/hookbox-postgres", version = "0.1.0" }
hookbox-providers = { path = "crates/hookbox-providers", version = "0.1.0" }
hookbox-server = { path = "crates/hookbox-server", version = "0.1.0" }
hookbox-cli = { path = "crates/hookbox-cli", version = "0.1.0" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP / web
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
hyper = { version = "1", features = ["full"] }
http = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Crypto
hmac = "0.13"
sha2 = "0.11"
hex = "0.4"
subtle = "2"
rsa = { version = "0.9", features = ["sha2"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.18"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Types
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1"
base64 = "0.22"

# Error handling
thiserror = "2"
anyhow = "1"

# Config
toml = "0.8.23"

# Emitter backends
rdkafka = { version = "0.36", features = ["cmake-build"] }
async-nats = "0.38"
aws-sdk-sqs = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }

# Testing
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"
http-body-util = "0.1"
bolero = "0.13"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
cucumber = "0.22"
futures = "0.3"
