[package]
name = "hookbox-scenarios"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[features]
default = []
bdd-server = [
    "dep:testcontainers",
    "dep:reqwest",
    "dep:hookbox-server",
    "dep:hookbox-postgres",
]

[dependencies]
hookbox.workspace = true
hookbox-server = { workspace = true, optional = true }
hookbox-postgres = { workspace = true, optional = true }
async-trait.workspace = true
bytes.workspace = true
chrono.workspace = true
cucumber.workspace = true
http.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time", "test-util"] }
tracing.workspace = true
uuid.workspace = true
testcontainers = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }

[[test]]
name = "core_bdd"
harness = false

[[test]]
name = "server_bdd"
harness = false
required-features = ["bdd-server"]
