[package]
name = "hookbox-emitter-kafka"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Kafka emitter adapter for hookbox."
publish = false

[lints]
workspace = true

[dependencies]
hookbox.workspace = true
rdkafka.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tracing.workspace = true
tokio.workspace = true

[dev-dependencies]
testcontainers.workspace = true
testcontainers-modules = { workspace = true, features = ["kafka"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
chrono = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
hookbox = { workspace = true }
rdkafka = { workspace = true }
