[package]
name = "hookbox-emitter-sqs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "AWS SQS emitter adapter for hookbox."
publish = false

[lints]
workspace = true

[dependencies]
hookbox.workspace = true
aws-sdk-sqs.workspace = true
aws-config.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tracing.workspace = true
tokio.workspace = true
