[package]
name = "hookbox-providers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Provider signature verification adapters for hookbox (Stripe, BVNK, generic HMAC)."

[lints]
workspace = true

[features]
default = ["stripe", "bvnk", "generic-hmac"]
stripe = []
bvnk = []
generic-hmac = []

[dependencies]
hookbox.workspace = true
hmac.workspace = true
sha2.workspace = true
hex.workspace = true
subtle.workspace = true
http.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
async-trait = "0.1"

[dev-dependencies]
tokio = { workspace = true }
