[package]
name = "hookbox-providers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Provider signature verification adapters for hookbox (Stripe, Adyen, BVNK, Triple-A, Walapay, Checkout.com, generic HMAC)."

[lints]
workspace = true

[features]
default = ["stripe", "bvnk", "generic-hmac", "adyen", "triplea", "walapay"]
stripe = []
bvnk = []
generic-hmac = []
adyen = []
triplea = ["dep:rsa"]
walapay = []

[dependencies]
hookbox.workspace = true
hmac.workspace = true
sha2.workspace = true
hex.workspace = true
subtle.workspace = true
http.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
async-trait = "0.1"
base64.workspace = true
rsa = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }
rand = "0.9"
