[package]
name = "hookbox-verify"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Kani proofs and Bolero property tests for hookbox."
publish = false

[lints]
workspace = true

[dependencies]
hookbox.workspace = true
bolero.workspace = true
